--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <reactor.bom.version>2020.0.21</reactor.bom.version>
+    <kafka.streams.version>3.1.1</kafka.streams.version>
     <spring.kafka.version>2.8.8</spring.kafka.version>
     <spring.boot.version>2.7.1</spring.boot.version>
   </properties>
