--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <kafka.streams.version>3.1.1</kafka.streams.version>
     <spring.kafka.version>2.9.0</spring.kafka.version>
     <spring.boot.version>2.7.3</spring.boot.version>
+    <testcontainers.version>1.17.3</testcontainers.version>
   </properties>
 
   <dependencyManagement>
@@ -34,6 +35,13 @@
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-bom</artifactId>
         <version>${reactor.bom.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
