--- a/reactor-kafka-example-libs/reactor-kafka-example-liquibase-lib/pom.xml
+++ b/reactor-kafka-example-libs/reactor-kafka-example-liquibase-lib/pom.xml
@@ -10,14 +10,14 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>reactor-kafka-example-core-lib</artifactId>
+  <artifactId>reactor-kafka-example-liquibase-lib</artifactId>
 
-  <name>reactor-kafka-example-core-lib</name>
+  <name>reactor-kafka-example-liquibase-lib</name>
 
   <dependencies>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
     </dependency>
   </dependencies>
 
