add internal resend counter, add max retries

--- a/reactor-kafka-example-apps/reactor-kafka-example-consumer-app/src/main/resources/application.properties
+++ b/reactor-kafka-example-apps/reactor-kafka-example-consumer-app/src/main/resources/application.properties
@@ -4,6 +4,7 @@ task.dlq.topic=task-dlq
 num.retries=3
 fast.pause.ms=2000
 slow.pause.ms=2000
+max.retries=3
 
 storage.datasource.jdbcUrl=
 storage.datasource.username=
