--- a/reactor-kafka-example-apps/reactor-kafka-example-consumer-app/Dockerfile
+++ b/reactor-kafka-example-apps/reactor-kafka-example-consumer-app/Dockerfile
@@ -1,4 +1,21 @@
-FROM openjdk:8-alpine
+FROM adoptopenjdk/openjdk17:alpine as builder
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
+
+FROM adoptopenjdk/openjdk17:alpine
 EXPOSE 8080
-COPY target/reactor-kafka-example-consumer-app.jar app.jar
-ENTRYPOINT ["java","-jar","-noverify","app.jar","--server.port=8080"]
+RUN apk add --no-cache tzdata bind-tools iputils nmap curl busybox-extras && \
+ addgroup --gid 10001 app && \
+ adduser -h app -s /bin/sh -G app -D -u 10001 app
+ENV TZ Europe/Moscow
+USER 10001
+COPY --from=builder dependencies/ ./
+RUN true
+COPY --from=builder snapshot-dependencies/ ./
+RUN true
+COPY --from=builder spring-boot-loader/ ./
+RUN true
+COPY --from=builder application/ ./
+RUN true
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
