--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <reactor.bom.version>2020.0.24</reactor.bom.version>
-    <kafka.streams.version>3.1.1</kafka.streams.version>
-    <spring.kafka.version>2.9.0</spring.kafka.version>
-    <spring.boot.version>2.7.5</spring.boot.version>
-    <pg.jdbc.driver.version>42.5.0</pg.jdbc.driver.version>
-    <liquibase.version>4.15.0</liquibase.version>
-    <jooq.version>3.14.16</jooq.version>
-    <testcontainers.version>1.17.3</testcontainers.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <reactor.bom.version>2022.0.4</reactor.bom.version>
+    <spring.boot.version>3.0.4</spring.boot.version>
+    <pg.jdbc.driver.version>42.5.4</pg.jdbc.driver.version>
+    <liquibase.version>4.20.0</liquibase.version>
+    <testcontainers.version>1.17.6</testcontainers.version>
   </properties>
 
   <dependencyManagement>
@@ -48,6 +45,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>3.18.0</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
